lib/src/compiler/tests/testdata/errors/111.out
error[E020]: duplicate pattern modifier
 --> line:3:23
  |
3 |     $a = "foo" xor(0) xor(1-2)
  |                       ^^^^^^^^ duplicate modifier
  |